tlibc/source/gen/tlibc_xlsx_reader_workbook_rels_l.c
/* Generated by re2c 0.13.5 on Wed Jun 04 11:18:57 2014 */
#line 1 "D:/GitHub/TLibC/source/protocol/tlibc_xlsx_reader_workbook_rels_l.re"
#include "protocol/tlibc_xlsx_reader.h"
#include "tlibc_xlsx_reader_workbook_rels_l.h"
#include <string.h>

#define YYGETCONDITION()  self->scanner.state
#define YYSETCONDITION(s) self->scanner.state = s
#define STATE(name)  yyc##name
#define BEGIN(state) YYSETCONDITION(STATE(state))
#define YYCURSOR self->scanner.cursor
#define YYLIMIT self->scanner.limit
#define YYMARKER self->scanner.marker
#define YYCTYPE char

const char* tlibc_xlsx_reader_workbook_rels_search_file(tlibc_xlsx_reader_t *self, const char* rid)
{
	const char* target_begin = NULL;
	const char* rid_begin = NULL;

	self->scanner.cursor = self->workbook_rels_buff;
	self->scanner.limit = self->workbook_rels_buff + self->workbook_rels_buff_size;
	self->scanner.marker = NULL;	
	self->scanner.state = yycINITIAL;

restart:
	if(YYCURSOR >= YYLIMIT)
	{
		return NULL;
	}

#line 33 "D:/GitHub/TLibC/source/gen/tlibc_xlsx_reader_workbook_rels_l.c"
{
	YYCTYPE yych;
	switch (YYGETCONDITION()) {
	case yycINITIAL: goto yyc_INITIAL;
	case yycIN_RELATIONSHIPS: goto yyc_IN_RELATIONSHIPS;
	}
/* *********************************** */
yyc_INITIAL:

	yych = *YYCURSOR;
	switch (yych) {
	case '<':	goto yy4;
	default:	goto yy2;
	}
yy2:
	++YYCURSOR;
yy3:
#line 71 "D:/GitHub/TLibC/source/protocol/tlibc_xlsx_reader_workbook_rels_l.re"
	{ goto restart;				}
#line 53 "D:/GitHub/TLibC/source/gen/tlibc_xlsx_reader_workbook_rels_l.c"
yy4:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '/':	goto yy5;
	case 'R':
	case 'r':	goto yy7;
	default:	goto yy3;
	}
yy5:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy21;
	default:	goto yy6;
	}
yy6:
	YYCURSOR = YYMARKER;
	goto yy3;
yy7:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy8;
	default:	goto yy6;
	}
yy8:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy9;
	default:	goto yy6;
	}
yy9:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':
	case 'a':	goto yy10;
	default:	goto yy6;
	}
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy11;
	default:	goto yy6;
	}
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':
	case 'i':	goto yy12;
	default:	goto yy6;
	}
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':
	case 'o':	goto yy13;
	default:	goto yy6;
	}
yy13:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy14;
	default:	goto yy6;
	}
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':
	case 's':	goto yy15;
	default:	goto yy6;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'H':
	case 'h':	goto yy16;
	default:	goto yy6;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':
	case 'i':	goto yy17;
	default:	goto yy6;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'P':
	case 'p':	goto yy18;
	default:	goto yy6;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':
	case 's':	goto yy19;
	default:	goto yy6;
	}
yy19:
	++YYCURSOR;
#line 33 "D:/GitHub/TLibC/source/protocol/tlibc_xlsx_reader_workbook_rels_l.re"
	{
	while(*YYCURSOR != '>')
		++YYCURSOR;
	++YYCURSOR;
	YYMARKER = YYCURSOR;
	BEGIN(IN_RELATIONSHIPS);
	goto restart;
}
#line 167 "D:/GitHub/TLibC/source/gen/tlibc_xlsx_reader_workbook_rels_l.c"
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy22;
	default:	goto yy6;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy23;
	default:	goto yy6;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':
	case 'a':	goto yy24;
	default:	goto yy6;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy25;
	default:	goto yy6;
	}
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':
	case 'i':	goto yy26;
	default:	goto yy6;
	}
yy26:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':
	case 'o':	goto yy27;
	default:	goto yy6;
	}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy28;
	default:	goto yy6;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':
	case 's':	goto yy29;
	default:	goto yy6;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'H':
	case 'h':	goto yy30;
	default:	goto yy6;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':
	case 'i':	goto yy31;
	default:	goto yy6;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'P':
	case 'p':	goto yy32;
	default:	goto yy6;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':
	case 's':	goto yy33;
	default:	goto yy6;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy34;
	default:	goto yy6;
	}
yy34:
	++YYCURSOR;
#line 70 "D:/GitHub/TLibC/source/protocol/tlibc_xlsx_reader_workbook_rels_l.re"
	{ BEGIN(INITIAL);				}
#line 262 "D:/GitHub/TLibC/source/gen/tlibc_xlsx_reader_workbook_rels_l.c"
/* *********************************** */
yyc_IN_RELATIONSHIPS:
	yych = *YYCURSOR;
	switch (yych) {
	case '>':	goto yy40;
	case 'I':
	case 'i':	goto yy42;
	case 'T':
	case 't':	goto yy43;
	default:	goto yy38;
	}
yy38:
	++YYCURSOR;
yy39:
#line 71 "D:/GitHub/TLibC/source/protocol/tlibc_xlsx_reader_workbook_rels_l.re"
	{ goto restart;				}
#line 279 "D:/GitHub/TLibC/source/gen/tlibc_xlsx_reader_workbook_rels_l.c"
yy40:
	++YYCURSOR;
#line 62 "D:/GitHub/TLibC/source/protocol/tlibc_xlsx_reader_workbook_rels_l.re"
	{ 
	if(strcmp(rid_begin, rid) == 0)
		return target_begin;

	target_begin = NULL;
	rid_begin = NULL;
	goto restart;
}
#line 291 "D:/GitHub/TLibC/source/gen/tlibc_xlsx_reader_workbook_rels_l.c"
yy42:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'D':
	case 'd':	goto yy53;
	default:	goto yy39;
	}
yy43:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'A':
	case 'a':	goto yy44;
	default:	goto yy39;
	}
yy44:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy46;
	default:	goto yy45;
	}
yy45:
	YYCURSOR = YYMARKER;
	goto yy39;
yy46:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'G':
	case 'g':	goto yy47;
	default:	goto yy45;
	}
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy48;
	default:	goto yy45;
	}
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy49;
	default:	goto yy45;
	}
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
	case '=':	goto yy50;
	default:	goto yy45;
	}
yy50:
	yych = *++YYCURSOR;
	switch (yych) {
	case '"':	goto yy51;
	default:	goto yy45;
	}
yy51:
	++YYCURSOR;
#line 42 "D:/GitHub/TLibC/source/protocol/tlibc_xlsx_reader_workbook_rels_l.re"
	{
	target_begin = YYCURSOR;
	while(*YYCURSOR != '\"')
		++YYCURSOR;
	*YYCURSOR = 0;
	++YYCURSOR;
	YYMARKER = YYCURSOR;
	goto restart;
}
#line 361 "D:/GitHub/TLibC/source/gen/tlibc_xlsx_reader_workbook_rels_l.c"
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
	case '=':	goto yy54;
	default:	goto yy45;
	}
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
	case '"':	goto yy55;
	default:	goto yy45;
	}
yy55:
	++YYCURSOR;
#line 52 "D:/GitHub/TLibC/source/protocol/tlibc_xlsx_reader_workbook_rels_l.re"
	{
	rid_begin = YYCURSOR;
	while(*YYCURSOR != '\"')
		++YYCURSOR;
	*YYCURSOR = 0;
	++YYCURSOR;
	YYMARKER = YYCURSOR;
	goto restart;
}
#line 386 "D:/GitHub/TLibC/source/gen/tlibc_xlsx_reader_workbook_rels_l.c"
}
#line 72 "D:/GitHub/TLibC/source/protocol/tlibc_xlsx_reader_workbook_rels_l.re"

}
